--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,9 @@
 
     <string name="app_name">IACT</string>
     <string name="action_settings">Settings</string>
+    <string name="ptr_pull_to_refresh">Pull to refresh</string>
+    <string name="ptr_release_to_refresh">Release to refresh</string>
+    <string name="ptr_refreshing">Refreshing…</string>
+    <string name="ptr_last_updated">Updated: %1$s</string>
 
 </resources>
